--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
@@ -16,29 +16,29 @@
 {% block navbar %}
 {% if mode == "new" %}
       <li><a class="inactive">Atletas</a></li>
-      <li class="active"><a href="../../competiciones">Competiciones</a></li>
+      <li class="active"><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
-      <li><a href="../../configuracion/">Configuración</a></li>
+      <li><a href="{{ path('configuracion') }}">Configuración</a></li>
 {% elseif mode == "edit" %}
       <li><a class="inactive">Atletas</a></li>
-      <li class="active"><a href="../../../competiciones">Competiciones</a></li>
+      <li class="active"><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
-      <li><a href="../../../configuracion/">Configuración</a></li>
+      <li><a href="{{ path('configuracion') }}">Configuración</a></li>
 {% endif %}
 {% endblock %}
 
 {% block breadcrumb %}
   {% if mode == "new" %}
-  <li><a href="../../">Portada Admin</a></li>
-  <li><a href="../../competiciones">Competiciones</a></li>
+  <li><a href="{{ path('homepage') }}">Portada Admin</a></li>
+  <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
   <li class="active">Añadir competición</li>
   {% elseif mode == "edit" %}
-  <li><a href="../../../">Portada Admin</a></li>
-  <li><a href="../../../competiciones">Competiciones</a></li>
+  <li><a href="{{ path('homepage') }}">Portada Admin</a></li>
+  <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
   <li class="active">Editar competición</li>
   {% endif %}
 {% endblock %}
@@ -47,7 +47,7 @@
    {% if mode == "new" %}
    <h1 id="container_title" class="row page-header">Añadir competición</h1>
    {% elseif mode == "edit" %}
-    <h1 id="container_title" class="row page-header">Editar competición <small>{{ nombre }} ({{ temp }} / {{ temp + 1}})</small></h1>
+    <h1 id="container_title" class="row page-header">Editar competición <small>{{ nombre }} ({{ temp }}/{{ (temp + 1)|slice(2, 2)}})</small></h1>
    {% endif %}
    
    {% if exception is defined %}
@@ -114,10 +114,10 @@
           </div>
           <div class="row">
               {% if mode == "new" %}
-              <a type="button" class="btn btn-m btn-default col-xs-3" href="../../competiciones"><span class="glyphicon glyphicon-menu-left"></span> Cancelar</a>
+              <a type="button" class="btn btn-m btn-default col-xs-3" href={{ path('listado_competiciones') }}><span class="glyphicon glyphicon-menu-left"></span> Cancelar</a>
               <button type="submit" class="btn btn-m btn-primary col-xs-offset-1 col-xs-8"><span class="glyphicon glyphicon-save"></span> Crear</button>
               {% elseif mode == "edit" %}
-              <a type="button" class="btn btn-m btn-default col-xs-3" href="../../../competiciones"><span class="glyphicon glyphicon-menu-left"></span> Cancelar</a>
+              <a type="button" class="btn btn-m btn-default col-xs-3" href="{{ path('listado_competiciones') }}"><span class="glyphicon glyphicon-menu-left"></span> Cancelar</a>
               <button type="submit" class="btn btn-m btn-primary col-xs-offset-1 col-xs-8"><span class="glyphicon glyphicon-save"></span> Guardar</button>
               {% endif %}
           </div>
