--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/ver_competicion.html.twig
@@ -1,21 +1,21 @@
 
 {% extends 'EasanlesAtletismoBundle:Default:index.html.twig' %}
 
-{% block title %}{{ com.nombre }} ({{ com.temp }} / {{ com.temp + 1}}){% endblock %}
+{% block title %}{{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }}){% endblock %}
 
 {% block navbar %}
       <li><a class="inactive">Atletas</a></li>
-      <li class="active"><a href="../../competiciones">Competiciones</a></li>
+      <li class="active"><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
-      <li><a href="../../configuracion/">Configuración</a></li>
+      <li><a href="{{ path('configuracion') }}">Configuración</a></li>
 {% endblock %}
 
 {% block breadcrumb %}
-  <li><a href="../../">Portada Admin</a></li>
-  <li><a href="../../competiciones">Competiciones</a></li>
-  <li class="active">{{ com.nombre }} ({{ com.temp }} / {{ com.temp +1 }})</li>
+  <li><a href="{{ path('homepage') }}">Portada Admin</a></li>
+  <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
+  <li class="active">{{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</li>
 {% endblock %}
 
    {% block modallabel %}Confirmar borrado{% endblock %}
@@ -25,7 +25,7 @@
    {% block modalprimary %}<a id="confirmbutton" type="button" class="btn btn-danger" href=""><span class="glyphicon glyphicon-remove"></span> Borrar</a>{% endblock %}
 
 {% block container %}
-   <h1 id="container_title" class="row page-header">{{ com.nombre }} ({{ com.temp }} / {{ com.temp + 1}})</h1>
+   <h1 id="container_title" class="row page-header">{{ com.nombre }} ({{ com.temp }}/{{ (com.temp + 1)|slice(2, 2) }})</h1>
     
    <div class="row">
       <div class="col-xs-12 col-sm-8 col-sm-push-4">
@@ -53,9 +53,9 @@
          <p class="text-center"><strong>COMPETICIÓN OFICIAL DEL CLUB</strong></p>
          {% endif %}
          <a type="button" class="btn btn-m btn-default hidden-xs" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
-         <a type="button" class="btn btn-m btn-default" href="../editar/{{ com.sid }}/"><span class="glyphicon glyphicon-edit"></span> Editar</a>
-         <a type="button" class="btn btn-m btn-{% if com.pruebas.toArray()|length == 0 %}warning{% else %}default{% endif %}" href="../../pruebas/{{ com.sid }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas <span class="badge">{{ com.pruebas.toArray()|length }}</span></a>
-         <button type="button" class="btn btn-m btn-danger pull-right" onClick="showModal('delCOM', '{{ com.nombre }}', '{{ com.temp }}', '../borrar?i={{ com.sid }}')"><span class="glyphicon glyphicon-remove"></span> Borrar</button>
+         <a type="button" class="btn btn-m btn-default" href="{{ path('editar_competicion', {'id': com.sid}) }}"><span class="glyphicon glyphicon-edit"></span> Editar</a>
+         <a type="button" class="btn btn-m btn-{% if com.pruebas.toArray()|length == 0 %}warning{% else %}default{% endif %}" href="{{ path('listado_pruebas', {'sidCom': com.sid}) }}"><span class="glyphicon glyphicon-list"></span> Lista de pruebas <span class="badge">{{ com.pruebas.toArray()|length }}</span></a>
+         <button type="button" class="btn btn-m btn-danger pull-right" onClick="showModal('delCOM', '{{ com.nombre }}', '{{ com.temp }}', '{{ path('borrar_competicion', {'i': com.sid}) }}')"><span class="glyphicon glyphicon-remove"></span> Borrar</button>
       </div>
       <div class="col-xs-12 col-sm-4 col-sm-pull-8">
          <a href="{{ vich_uploader_asset(com, 'cartelFile') }}"><img src="{{ vich_uploader_asset(com, 'cartelFile') }}" alt="{{ com.nombre }}" class="img-responsive thumbnail"/></a>
