--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/menu_configuracion.html.twig
@@ -5,15 +5,15 @@
 
 {% block navbar %}
       <li><a class="inactive">Atletas</a></li>
-      <li><a href="../competiciones">Competiciones</a></li>
+      <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
-      <li class="active"><a href="./">Configuración</a></li>
+      <li class="active"><a href="{{ path('configuracion') }}">Configuración</a></li>
 {% endblock %}
 
 {% block breadcrumb %}
-  <li><a href="../">Portada Admin</a></li>
+  <li><a href="{{ path('homepage') }}">Portada Admin</a></li>
   <li class="active">Configuración</li>
 {% endblock %}
    
