--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,7 @@
 
 {% extends '::base.html.twig' %}
 
-{% block title %}Hola {{ name }}!{% endblock %}
+{% block title %}Atletismo{% endblock %}
 
 {% block css %}
    {#
@@ -51,11 +51,11 @@
             <ul class="nav navbar-nav">
                {% block navbar %}
                <li><a class="inactive">Atletas</a></li>
-               <li><a href="./competiciones">Competiciones</a></li>
+               <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
                <li><a class="inactive">Records</a></li>
                <li><a class="inactive">Noticias</a></li>
                <li><a class="inactive">Informes</a></li>
-               <li><a href="./configuracion/">Configuración</a></li>
+               <li><a href="{{ path('configuracion') }}">Configuración</a></li>
                {% endblock %}
             </ul>
             <ul class="navbar-text pull-right">
@@ -64,7 +64,7 @@
          </div><!--/.nav-collapse -->
       </div>
    </nav>
-
+    
     <div class="container">
        <ol class="breadcrumb">
        {% block breadcrumb %}
@@ -88,9 +88,16 @@
              <li>A aplicación debe ser completamente xestionable a través dunha interface web.</li>
           </ul>
        </div>
-
        {% endblock %}
-    </div><!-- /.container -->
+    </div>
+    <footer class="footer">
+       <div class="container">
+          {% block footer %}
+             <small><strong>Atletismo</strong><span class="text-muted"><span class="hidden-xs"> - Sistema de gestión de un club de atletismo</span><div class="pull-right"><a href="https://github.com/easanles/atletismo-edu">GitHub</a> | Eduardo Alonso Sanlés - &copy;2015</div></span></small>
+          {% endblock %}
+       </div>
+    </footer>
+    
 {% endblock %}
 
 {% block js %}
