--- a/src/Easanles/AtletismoBundle/Resources/views/TipoPrueba/list_tipopruebaformato.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/TipoPrueba/list_tipopruebaformato.html.twig
@@ -14,7 +14,7 @@
                      <td>{{ row.unidades }}</td><td>{{ row.numint }}</td>
                      <td>
                         <div class="btn-group visible-xs-block">
-                           <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>
+                           <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-option-horizontal" aria-label="Acciones"></span></button>
                            <ul class="dropdown-menu pull-right">
                               <li><a href="#" onClick="showModal('ediTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><span class="glyphicon glyphicon-edit"></span> Editar</a></li>
                               <li><a class="bg-danger" href="#" onClick="showModal('delTPR', '{{ row.nombre }}', {{ row.sid }}, null)"><div class="text-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</div></a></li>
