Fecha de inicio de temporadas

--- a/src/Easanles/AtletismoBundle/Resources/views/Configuracion/form_ajustes.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Configuracion/form_ajustes.html.twig
@@ -1,9 +1,11 @@
+                {% block dumpv %}{% if dumpv is defined %}{{ dump(dumpv) }}{% endif %}{% endblock %}
+         
          <div class="row">
             <form id="cfg-form" class="form-horizontal" action="{{ path("configuracion_cambiar_ajustes") }}" method="post">
                <div class="form-group{% if errFIniTemp is defined %} has-error has-feedback{% endif %}{% if okFIniTemp is defined %} has-success has-feedback{% endif %}">
                   <label for="cfg_fIniTemp" class="col-xs-12 col-sm-4 control-label">Día y mes de inicio de las temporadas</label>
                   <div class="col-xs-12 col-sm-6">
-                     <input type="date" class="form-control" id="cfg_fIniTemp" placeholder="dd/mm" name="fIniTemp" value="{% if fIniTemp is not null %}{{ fIniTemp }}{% endif %}">
+                     <input type="text" class="form-control" id="cfg_fIniTemp" placeholder="dd/mm" name="fIniTemp" value="{% if fIniTemp is not null %}{{ fIniTemp }}{% endif %}">
                      {% if okFIniTemp is defined %}
                         <span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
                      {% endif %}
