Menu nav Atletas. Symfony 2.7.3

--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
@@ -15,7 +15,7 @@
 
 {% block navbar %}
 {% if mode == "new" %}
-      <li><a class="inactive">Atletas</a></li>
+      <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
       <li class="active"><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
