--- a/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Default/index.html.twig
@@ -50,7 +50,7 @@
          <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                {% block navbar %}
-               <li><a class="inactive">Atletas</a></li>
+               <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
                <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
                <li><a class="inactive">Records</a></li>
                <li><a class="inactive">Noticias</a></li>
