Datos basicos listado atletas

--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/list_atleta.html.twig
@@ -25,6 +25,67 @@
 
 {% block container %}   
    <h1 id="container_title" class="row page-header">Listado de atletas</h1>
+   <div id="container_header" class="row">
+      <div class="col-xs-8 col-sm-6">
+         <select class="form-control" onChange="atlSearch()">
+            <option value="" {% if cat is not defined %}selected{% endif %}>Todas las categorías</option>
+         </select>
+      </div>
+      <a class="btn btn-primary" href="" disabled><span class="glyphicon glyphicon-plus"></span> Añadir</a>
+      <div class="input-group col-xs-6 col-sm-4 pull-right">
+         <input id="search-input" type="search" class="form-control" placeholder="Buscar"{% if query is defined %}value="{{query}}"{% endif %}) onkeydown="checkEnterKeypress(event)" disabled>
+         <div class="input-group-btn"><button id="search-button" class="btn btn-default" type="button" onClick="atlSearch()" disabled><span class="glyphicon glyphicon-search"></span></button></div>
+      </div>
+   </div>
+   
+   <table id="primary_table" class="table table-hover table-bordered table-condensed table-striped table-responsive">
+      <tbody>
+         <tr>
+            <th class="hidden-xs">Id</th>
+            <th class="visible-xs-block">Licencias</th>
+            <th class="hidden-xs"><abbr title="Licencia FGA" class="visible-xs-block">L. FGA</abbr><div class="hidden-xs">Licencia FGA</div></th>
+            <th class="hidden-xs"><abbr title="Licencia XOGADE" class="visible-xs-block">L. XOGADE</abbr><div class="hidden-xs">Licencia XOGADE</div></th>
+            <th><abbr title="Categoría" class="visible-xs-block">Cat.</abbr><div class="hidden-xs">Categoría</div></th>
+            <th>Apellidos</th>
+            <th>Nombre</th>
+            <th class="hidden-xs"><abbr title="Sexo">H/M</abbr></th>
+            <th class="hidden-xs"><abbr title="Fecha de nacimiento" class="visible-xs-block">F. nac.</abbr><div class="hidden-xs">Fecha de nacimiento</div></th>
+            <th>Nick</th>
+            <th><abbr title="Acciones" class="visible-xs-block">Acc.</abbr><div class="hidden-xs">Acciones</div></th>
+         </tr>
+         {% for atl in atletas %}
+         <tr>
+         <td class="hidden-xs">{{ atl.id }}</td>
+         <td class="visible-xs-block">
+            <small>{% if atl.lfga is null %} <em>---</em> {% else %} {{ atl.lfga }} {% endif %}</small><br>
+            <small>{% if atl.lxogade is null %} <em>---</em> {% else %} {{ atl.lxogade }} {% endif %}</small>
+         </td>
+         <td class="hidden-xs">{% if atl.lfga is null %} <em>Sin L. FGA</em> {% else %} {{ atl.lfga }} {% endif %} </td>
+         <td class="hidden-xs">{% if atl.lxogade is null %} <em>Sin L. XOGADE</em> {% else %} {{ atl.lxogade }} {% endif %} </td>
+         <td>Categoría</td>
+         <td>{{ atl.apellidos }}</td>
+         <td>{{ atl.nombre }}</td>
+         <td class="hidden-xs">{% if atl.sexo == false %}<abbr title="Hombre">H</abbr>{% elseif atl.sexo == true %}<abbr title="Mujer">M</abbr>{% endif %}</td>
+         <td class="hidden-xs">{{ atl.fnac|date('d/m/Y') }}</td>
+         <td>{% if atl.nick is null %} <em>--</em> {% else %} {{ atl.nick }} {% endif %} </td>
+         <td>
+            <div class="btn-group visible-xs-block">
+               <button type="button" class="btn btn-xs btn-block btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-option-horizontal"></span></button>
+               <ul class="dropdown-menu pull-right">
+                  <li><a href=""><span class="glyphicon glyphicon-edit"></span> Editar</a></li>
+                  <li><a class="bg-danger" href="#" onClick="showModal()"><div class="text-danger"><span class="glyphicon glyphicon-remove"></span> Borrar</div></a></li>
+               </ul>
+            </div>
+            <div class="hidden-xs">
+               <a type="button" class="btn btn-xs btn-default" data-toggle="tooltip" data-placement="top" title="Editar" href=""><span class="glyphicon glyphicon-edit"></span></a>
+               <button type="button" class="btn btn-xs btn-danger" data-toggle="tooltip" data-placement="top" title="Borrar" onClick="showModal()"><span class="glyphicon glyphicon-remove"></span></button>
+            </div>
+         </td>
+         </tr>
+         {% endfor %}
+      </tbody>
+   </table>
+   
    
 {% endblock %}
 
