--- a/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Competicion/form_competicion.html.twig
@@ -8,37 +8,25 @@
 {% endblock %}
 
 {% block css %}
-   <link rel="stylesheet" href="{{ asset('bundles/atletismo/css/index.css') }}" />
-
+    {{ parent() }}
    <style> .vich-image img {max-width: 200px} </style>
 {% endblock %}
 
 {% block navbar %}
-{% if mode == "new" %}
       <li><a href="{{ path('listado_atletas') }}">Atletas</a></li>
       <li class="active"><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
       <li><a class="inactive">Records</a></li>
       <li><a class="inactive">Noticias</a></li>
       <li><a class="inactive">Informes</a></li>
       <li><a href="{{ path('configuracion') }}">Configuración</a></li>
-{% elseif mode == "edit" %}
-      <li><a class="inactive">Atletas</a></li>
-      <li class="active"><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
-      <li><a class="inactive">Records</a></li>
-      <li><a class="inactive">Noticias</a></li>
-      <li><a class="inactive">Informes</a></li>
-      <li><a href="{{ path('configuracion') }}">Configuración</a></li>
-{% endif %}
 {% endblock %}
 
 {% block breadcrumb %}
-  {% if mode == "new" %}
   <li><a href="{{ path('homepage') }}">Portada Admin</a></li>
   <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
+  {% if mode == "new" %}
   <li class="active">Añadir competición</li>
   {% elseif mode == "edit" %}
-  <li><a href="{{ path('homepage') }}">Portada Admin</a></li>
-  <li><a href="{{ path('listado_competiciones') }}">Competiciones</a></li>
   <li class="active">Editar competición</li>
   {% endif %}
 {% endblock %}
