--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/form_atleta.html.twig
@@ -41,6 +41,10 @@
    {% if exception is defined %}
    <div class="alert alert-danger alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>Error: </strong><span>{{ exception }}</span></div>
    {% endif %}
+
+   {% if warning is defined %}
+   <div class="alert alert-warning alert-dismissible fade in" role="alert"> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong><span class="glyphicon glyphicon-alert"></span></strong><span> {{ warning }}</span></div>
+   {% endif %}
    
    <div id="data_form" class="row">
 
@@ -121,7 +125,7 @@
           <div class="row">
               {% if mode == "new" %}
               <a type="button" class="btn btn-m btn-default col-xs-3" href={{ path('listado_atletas') }}><span class="glyphicon glyphicon-menu-left"></span> Cancelar</a>
-              <button type="submit" class="btn btn-m btn-primary col-xs-offset-1 col-xs-8"><span class="glyphicon glyphicon-save"></span> Crear</button>
+              <button type="submit" class="btn btn-m btn-{% if warning is defined %}warning{% else %}primary{% endif %} col-xs-offset-1 col-xs-8"><span class="glyphicon glyphicon-save"></span> Crear</button>
               {% elseif mode == "edit" %}
               <a type="button" class="btn btn-m btn-default col-xs-3" href="{{ path('listado_atletas') }}"><span class="glyphicon glyphicon-menu-left"></span> Cancelar</a>
               <button type="submit" class="btn btn-m btn-primary col-xs-offset-1 col-xs-8"><span class="glyphicon glyphicon-save"></span> Guardar</button>
@@ -129,9 +133,6 @@
           </div>
        </div>
     </div>
-    
-    
-    
     
     {{ form_rest(form) }}
  
