--- a/src/Easanles/AtletismoBundle/Resources/views/Atleta/ver_atleta.html.twig
+++ b/src/Easanles/AtletismoBundle/Resources/views/Atleta/ver_atleta.html.twig
@@ -28,25 +28,44 @@
    <h1 id="container_title" class="row page-header">Atleta: <small>{% if atl.nick is not null %}{{ atl.nick }}{% else %}{{atl.apellidos}}, {{atl.nombre}}{% endif %}</small></h1>
     
    <div class="row">
-      <div class="col-xs-12 col-sm-8 col-sm-push-4">
-         <table class="table table-responsive">
+      <div class="col-xs-12 col-sm-9 col-sm-push-3">
+         <table class="table table-responsive hidden-xs">
             <tbody>
-               <tr><td><strong class="visible-xs-block"><abbr title="Licencia FGA">FGA:</abbr></strong><strong class="hidden-xs">Licencia FGA:</strong></td><td colspan="2">{{ atl.lfga }}</td><td><strong class="visible-xs-block"><abbr title="Licencia XOGADE">XOGADE:</abbr></strong><strong class="hidden-xs">Licencia XOGADE:</strong></td><td colspan="2">{{ atl.lxogade }}</td></tr>
+               <tr><td><strong>Licencia FGA:</strong></td><td colspan="2">{{ atl.lfga }}</td><td><strong>Licencia XOGADE:</strong></td><td colspan="2">{{ atl.lxogade }}</td></tr>
                <tr><td><strong>Apellidos:</strong></td><td colspan="2">{{ atl.apellidos }}</td><td><strong>Nombre:</strong></td><td colspan="2">{{ atl.nombre }}</td></tr>
-               <tr><td><strong>DNI:</strong></td><td>{{ atl.dni }}</td><td><strong>Nick:</strong></td><td>{{ atl.nick }}</td><td><strong class="visible-xs-block"><abbr title="Nacionalidad">Nac.:</abbr></strong><strong class="hidden-xs">Nacionalidad:</strong></td><td>{{ atl.nacion }}</td></tr>
-               <tr><td><strong class="visible-xs-block"><abbr title="Fecha de nacimiento">F. nac.:</abbr></strong><strong class="hidden-xs">Fecha de nacimiento:</strong></td><td>{{ atl.fnac|date('d/m/Y') }}</td><td><strong>Categoría:</strong></td><td>{{ categoria.nombre }}</td><td><strong>Sexo:</strong></td><td>{% if atl.sexo == false %}Hombre{% elseif atl.sexo == true %}Mujer{% endif %}</td></tr>
+               <tr><td><strong>DNI:</strong></td><td colspan="2">{{ atl.dni }}</td><td><strong>Nick:</strong></td><td colspan="2">{{ atl.nick }}</td></tr>
+               <tr><td><strong>Fecha de nacimiento:</strong></td><td colspan="2">{{ atl.fnac|date('d/m/Y') }}</td><td><strong>Categoría:</strong></td><td colspan="2">{{ categoria.nombre }}</td></tr>
+               <tr><td><strong>Nacionalidad:</strong></td><td colspan="2">{{ atl.nacion }}</td><td><strong>Sexo:</strong></td><td colspan="2">{% if atl.sexo == false %}Hombre{% elseif atl.sexo == true %}Mujer{% endif %}</td></tr>
                <tr><td><strong>Dirección:</strong></td><td colspan="3">{{ atl.direccion }}</td><td><abbr title="Código Postal"><strong>CP:</strong></abbr></td><td>{{ atl.cp }}</td></tr>
                <tr><td><strong>Localidad:</strong></td><td>{{ atl.localidad }}</td><td><strong>Provincia:</strong></td><td>{{ atl.provincia }}</td><td><strong>País:</strong></td><td>{{ atl.pais }}</td></tr>
-               <tr><td><strong>Email<span class="hidden-xs"> de contacto</span>:</strong></td><td colspan="5"><a href="mailto:{{ atl.email }}">{{ atl.email }}</a></td></tr>
+               <tr><td><strong>Email de contacto:</strong></td><td colspan="5"><a href="mailto:{{ atl.email }}">{{ atl.email }}</a></td></tr>
                <tr><td colspan="6"><strong>Notas:</strong></td></tr>
                <tr><td colspan="6">{{ atl.notas|nl2br }}</td></tr>
             </tbody>
          </table>
+         <table class="table table-responsive visible-xs-block" style="display: table !important;">
+            <tbody>
+               <tr><td><strong>FGA:</strong></td><td><small>{{ atl.lfga }}</small></td><td><strong>XOGADE:</strong></td><td><small>{{ atl.lxogade }}</small></td></tr>
+               <tr><td><strong>Apellidos:</strong></td><td colspan="3">{{ atl.apellidos }}</td></tr>
+               <tr><td><strong>Nombre:</strong></td><td colspan="3">{{ atl.nombre }}</td></tr>
+               <tr><td><strong>DNI:</strong></td><td colspan="3">{{ atl.dni }}</td></tr>
+               <tr><td><strong>Nick:</strong></td><td colspan="3">{{ atl.nick }}</td></tr>
+               <tr><td><abbr title="Fecha de nacimiento"><strong>F. nac.:</strong></abbr></td><td colspan="3">{{ atl.fnac|date('d/m/Y') }}</td></tr>
+               <tr><td><strong>Categoría:</strong></td><td>{{ categoria.nombre }}</td><td><abbr title="FNacionalidad"><strong>Nacion.:</strong></abbr></td><td>{{ atl.nacion }}</td></tr>
+               <tr><td><strong>Sexo:</strong></td><td colspan="3">{% if atl.sexo == false %}Hombre{% elseif atl.sexo == true %}Mujer{% endif %}</td></tr>
+               <tr><td><strong>Dirección:</strong></td><td colspan="3">{{ atl.direccion }}</td></tr>
+               <tr><td><abbr title="Código Postal"><strong>CP:</strong></abbr></td><td>{{ atl.cp }}</td><td><strong>Localidad:</strong></td><td>{{ atl.localidad }}</td></tr>
+               <tr><td><strong>Provincia:</strong></td><td>{{ atl.provincia }}</td><td><strong>País:</strong></td><td>{{ atl.pais }}</td></tr>
+               <tr><td><strong>Email:</strong></td><td colspan="3"><a href="mailto:{{ atl.email }}">{{ atl.email }}</a></td></tr>
+               <tr><td colspan="4"><strong>Notas:</strong></td></tr>
+               <tr><td colspan="4">{{ atl.notas|nl2br }}</td></tr>
+            </tbody>
+         </table>
          <a type="button" class="btn btn-m btn-default hidden-xs" href="javascript:history.back()"><span class="glyphicon glyphicon-menu-left"></span> Volver</a>
-         <a type="button" class="btn btn-m btn-default" href=""><span class="glyphicon glyphicon-edit"></span> Editar</a>
-         <button type="button" class="btn btn-m btn-danger pull-right" onClick="showModal()"><span class="glyphicon glyphicon-remove"></span> Borrar</button>
+         <a type="button" class="btn btn-m btn-default" href="" disabled><span class="glyphicon glyphicon-edit"></span> Editar</a>
+         <button type="button" class="btn btn-m btn-danger pull-right" onClick="showModal()" disabled><span class="glyphicon glyphicon-remove"></span> Borrar</button>
       </div>
-      <div class="col-xs-12 col-sm-4 col-sm-pull-8">
+      <div class="col-xs-12 col-sm-3 col-sm-pull-9">
          <a href="{{ vich_uploader_asset(atl, 'fotoFile') }}"><img src="{{ vich_uploader_asset(atl, 'fotoFile') }}" alt="{{ atl.nombre }} {{ atl.apellidos }}" class="img-responsive thumbnail"/></a>
       </div>
    </div>
